--- a/css/src/main/_main.scss
+++ b/css/src/main/_main.scss
@@ -3,6 +3,217 @@
 // Extra small devices (portrait phones, less than 576px)
 // No media query since this is the default in Bootstrap
 
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+}
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Roboto', sans-serif;
+}
+strong {
+  font-weight: 600;
+}
+.hero-green {
+  background-image: url(../../../images/hero-green-01.png);
+  background-position: center center;
+  background-size: 100% auto;
+  h1 {
+    color: $white;
+    font-size: 160%;
+    &.intro {
+      span {
+      }
+    }
+  }
+}
+.message {
+  font-size: 130%;
+  line-height: 1.2;
+}
+.product {
+  width: 80%;
+  min-height: 100px;
+  margin: auto;
+  background-color: $white;
+  @include box-shadow(0,0,5px,$black_50);
+  position: relative;
+  p {
+    color: $baby_blue;
+  }
+ .price {
+    display: inline-block;
+    font-size: 250%;
+   font-weight: 600;
+    sup {
+      top: -9px;
+      font-size: 60%;
+    }
+    .currency {
+      font-size: 40%;
+      float: right;
+      text-decoration: underline;
+      margin: 13px 0 0 10px;
+      display: inline-block;
+    }
+  }
+  .day {
+    background-image: url(../../../images/per-day-background.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    font-weight: 100;
+    strong {
+      font-weight: 600;
+    }
+  }
+  .add-to-cart {
+    display: block;
+    background-color: $green;
+    color: $white;
+    border-radius: 4px;
+    border-bottom: 8px solid $dark_green;
+    position: relative;
+    width: 80%;
+    margin: 0 auto;
+    text-align: right;
+    padding: 3px 25px;
+    margin-top: 20px;
+    font-weight: 100;
+    img {
+      position: absolute;
+      left: -15px;
+      top: -10px;
+    }
+    .arrow-right {
+      background-image: url(../../../images/triangle-button.png);
+      background-size: cover;
+      display: block;
+      height: 12px;
+      width: 12px;
+      float: right;
+      margin: 6px 0 0 5px;
+    }
+    &:hover {
+      text-decoration: none;
+      background-color: $black;
+      border-bottom-color: $grey;
+    }
+  }
+}
+.custom-underlne {
+  background-image: url(../../../images/custom-underline.png);
+  background-position: left bottom;
+  background-repeat: repeat-x;
+  padding-bottom: 5px;
+}
+.tap-to-talk {
+  font-weight: 600;
+  display: block;
+  font-size: 150%;
+  a {
+    color: $baby_blue;
+  }
+}
+.bone-health-specialist {
+  font-size: 105%;
+  line-height: 2;
+  img {
+    position: relative;
+    top: -2px;
+  }
+}
+.guarantee {
+  background-color: $white;
+  width: 100%;
+  h3 {
+    color: $orange;
+    font-weight: 600;
+    margin-top: 20px;
+  }
+  p {
+    font-size: 120%;
+  }
+  .signature {
+    display: block;
+    margin: 0 auto;
+    width: 160px;
+  }
+}
+.white-line {
+  display:inline-block;
+  height: 7px;
+  border-bottom: 4px solid $white;
+  width: 50px;
+  position: relative;
+  top:-8px;
+}
+.sale {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  top: -30px;
+  right: -30px;
+  text-align: center;
+  border-radius: 90px;
+  background-color: $orange;
+  color: $white;
+  line-height: 1.1;
+  padding: 18px;
+  font-size: 130%;
+  @include box-shadow(0,0,5px,$black_50);
+  span {
+    display: block;
+    text-transform: uppercase;
+    font-size: 80%;
+  }
+}
+.popular {
+  background-color: $baby_blue;
+    .most {
+      text-align: center;
+      text-transform: uppercase;
+      color: $white;
+      margin: 0;
+      font-size: 100%;
+      padding: 0;
+    }
+  .product {
+    width: 98%;
+  }
+}
+.as-seen-on {
+  @include box-shadow(0,0,5px,$black_50);
+  background-color: $white;
+  h3 {
+    background-color: $green;
+    color: $white;
+  }
+  .col-3 {
+    vertical-align: middle;
+    line-height: 80px;
+  }
+}
+.reference {
+  h3 {
+    color: $baby_blue;
+  }
+  a {
+    color: $baby_blue;
+  }
+}
+nav {
+  margin: 15px 0;
+  li {
+    list-style: none;
+    display: inline-block;
+    padding: 0 8px 0 5px;
+    border-right: 1px solid $black;
+    line-height: 1;
+    color: $grey;
+    &:last-child {
+      border-right: none;
+    }
+  }
+}
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
 
@@ -15,7 +226,20 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-  
+  .white-line {
+    top: -12px;
+    width: 200px;
+  }
+  .message {
+    font-size: 215%;
+    line-height: 2.5;
+  }
+  .hero-green {
+    h1 {
+      font-size: 250%;
+      text-align: center;
+    }
+  }
 }
 
 // Extra large devices (large desktops, 1200px and up)
