--- a/css/src/main/_mixins.scss
+++ b/css/src/main/_mixins.scss
@@ -1,3 +1,7 @@
+// MIXINS
+
+// SHADOW
+
 @mixin box-shadow($top, $left, $blur, $color, $inset: false) {
   @if $inset {
     -webkit-box-shadow:inset $top $left $blur $color;
@@ -10,6 +14,7 @@
   }
 }
 
+// COLORS
 $black: #000000;
 $black_50: rgba(0,0,0,0.5);
 $white: #ffffff;
@@ -19,5 +24,5 @@ $green: #4c813d;
 $dark_green: #25875b;
 $baby_blue: #008ba4;
 
-
+// FONTS
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
